--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/foundersandcoders/pg-walkthrough/#readme",
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "nodemon": "^2.0.4"
+  },
+  "dependencies": {
+    "env2": "^2.2.2",
+    "pg": "^8.3.0"
   }
 }
